Change vector during landing

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>ATC Sim</title>
 
     <!-- main stylesheet (same folder as index.html) -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
 
     <!-- preload the module for faster startup -->
-    <link rel="modulepreload" href="main.js" />
+    <link rel="modulepreload" href="/main.js" />
 </head>
 <body>
     <div class="game-container">
