Do code formating and add correct speed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
                     placeholder="FL (100 ft)"
                     data-element="flightlevel-input"
                 />
-                <button data-action="set-flightlevel">Set altitude</button>
+                <button data-action="set-altitude">Set altitude</button>
+                <input
+                    type="number"
+                    min="600"
+                    max="900"
+                    step="10"
+                    placeholder="Speed (kph)"
+                    data-element="speed-input"
+                />
+                <button data-action="set-speed">Set speed</button>
             </div>
         </aside>
     </div>
