--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>ATC Sim</title>
+    <link rel="icon" href="files/favicon.ico" type="image/x-icon">
 
     <!-- main stylesheet (same folder as index.html) -->
     <link rel="stylesheet" href="./styles.css" />
