Add speed change and voice prototype

--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
 
     <!-- application script as an ES module -->
     <script type="module" src="./main.js"></script>
+    <script type="module" src="./voice.js"></script>
 </body>
 </html>
